--- a/src/app/components/ui/header/header.component.html
+++ b/src/app/components/ui/header/header.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-row>
       <ion-col size="1">
-        <ion-button class="back-button" (click)="prevStep()">
+        <ion-button class="back-button" (click)="prevSegment()">
           <ion-icon name="chevron-back-outline"></ion-icon>
         </ion-button>
       </ion-col>
