--- a/src/app/components/ui/header/header.component.scss
+++ b/src/app/components/ui/header/header.component.scss
@@ -1,4 +1,9 @@
 
+
+ion-header{
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+}
+
 ion-toolbar{
   --padding-start: .5rem;
   --padding-end: .5rem;
