--- a/src/app/components/ui/phone-input/phone-input.component.html
+++ b/src/app/components/ui/phone-input/phone-input.component.html
@@ -1,33 +1,33 @@
 <div class="container">
-  <ion-input [(ngModel)]="numero" class="phone__input" type="tel" placeholder="( X X X - X X X X X X )"></ion-input>
+  <ion-input [value]="formatPhoneNumber(numero)" class="phone__input" type="tel" placeholder="( X X X - X X X X X X )" (paste)="onPaste($event)"></ion-input>
   <ion-grid class="keyboard">
-    <ion-row>
-      <ion-col size="4"><ion-button class="number" expand="full" (click)="ontapButton('1')">1</ion-button></ion-col>
-      <ion-col size="4"><ion-button class="number" expand="full" (click)="ontapButton('2')">2</ion-button></ion-col>
-      <ion-col size="4"><ion-button class="number" expand="full" (click)="ontapButton('3')">3</ion-button></ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="4"><ion-button class="number" expand="full" (click)="ontapButton('4')">4</ion-button></ion-col>
-      <ion-col size="4"><ion-button class="number" expand="full" (click)="ontapButton('5')">5</ion-button></ion-col>
-      <ion-col size="4"><ion-button class="number" expand="full" (click)="ontapButton('6')">6</ion-button></ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="4"><ion-button class="number" expand="full" (click)="ontapButton('7')">7</ion-button></ion-col>
-      <ion-col size="4"><ion-button class="number" expand="full" (click)="ontapButton('8')">8</ion-button></ion-col>
-      <ion-col size="4"><ion-button class="number" expand="full" (click)="ontapButton('9')">9</ion-button></ion-col>
+    <!-- Botones numéricos -->
+    <ion-row *ngFor="let row of [0, 3, 6]; let i = index">
+      <ion-col size="4" *ngFor="let col of [0, 1, 2]">
+        <ion-button 
+          class="number" 
+          expand="full" 
+          (click)="ontapButton(numbers[row + col])" 
+          *ngIf="numbers[row + col]">
+          {{ numbers[row + col] }}
+        </ion-button>
+      </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="4">
         <ion-button expand="full" class="delete-button" (click)="delete()">
-          <ion-icon slot="icon-only" name="backspace-outline"></ion-icon>
+          <img src="assets/backspace-button.svg" alt="">
         </ion-button>
       </ion-col>
-      <ion-col size="4"><ion-button class="number" expand="full" (click)="ontapButton('0')">0</ion-button></ion-col>
       <ion-col size="4">
-        <ion-button shape="round" class="check-button" (click)="onSubmit()">
+        <ion-button class="number" expand="full" (click)="ontapButton('0')">0</ion-button>
+      </ion-col>
+      <ion-col size="4">
+        <ion-button shape="round" class="check-button" [ngClass]="{ 'disabled': numero.length < 10 }" [disabled]="numero.length < 10"  (click)="onSubmit()">
           <ion-icon slot="icon-only" name="checkmark"></ion-icon>
         </ion-button>
       </ion-col>
     </ion-row>
+
   </ion-grid>
 </div>
