--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -25,33 +25,13 @@ ion-content{
   margin: 0 0 1rem 0;
 }
 
-.message__text h1{
-  text-align: left;
-  font-size: 16px;
-  color: var(--coink-dark-green);
-  text-transform: uppercase;
-  font-weight: bold;
-  margin: 0 0 1rem 0;
-}
-
-.message{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  padding: 2rem 0;
-  border-bottom: 2px solid var(--coink-green);
-  margin-bottom: 2rem;
-}
-
-.message span{
-  color: #757575;
-}
-
 .register{
   padding: 25px;
 }
 .register ion-img{
   width: 100px;
   height: auto;
+  max-width: 100%;
+  overflow-clip-margin: content-box;
+  overflow: clip;
 }
